[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [{ name = "EvATive7" }]
classifiers = [ # TODO: Finish this
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["build", "pre-commit"] # TODO: Finish this
description = "" # TODO: Finish this
name = "name" # TODO: Finish this
readme = "README.md"
requires-python = ">=3.6"
version = "0.0.1"

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "pytest"] # TODO: Finish this

# [project.scripts]
# changelog = "changelog:main" # TODO: Finish this, if a script is needed

[project.urls]
"Homepage" = "https://github.com/EvATive7/" # TODO: Finish this

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[tool.isort]
profile = "black"

[tool.setuptools.package-dir]
"" = "src"

# TODO: Finish this file if you need to add anything
